<resources>
    <string name="app_name">MovieBooking</string>
    <string name="default_web_client_id">434610274928-idanoroiale7ogqpfekfpa4tg0q14n40.apps.googleusercontent.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="startup_error">There\'s some errors occurred when starting the app. Please try again!</string>
    <string name="ok">Ok</string>
    <string name="movie_booking">Movie Booking</string>
    <string name="login_to_enjoy_the_app">Login to enjoy the app</string>
    <string name="email_placeholder">Email...</string>
    <string name="password_placeholder">And password...</string>
    <string name="log_in">Log in</string>
    <string name="or">Or</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="not_have_an_account_yet">Not have an account yet?</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_me">Remember me?</string>
    <string name="receive_our_latest_information">Receive our latest information</string>
    <string name="password_must_match">Password must match*</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_validator_error">Password must have at least 1 uppercase, 1 lowercase, 1 number and 1 special character*</string>
    <string name="password">Password</string>
    <string name="invalid_email_error">Email must be valid*</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="can_we_know_your_name">Can we know your name?</string>
    <string name="cancel">Cancel</string>
    <string name="chatbot">Chatbot</string>
    <string name="hi">Hi, %1$s</string>
    <string name="search_hint">Search for movies, shows,...</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cinema">Cinema</string>
    <string name="screen">Screen</string>
    <string name="next">Next</string>
    <string name="combo_with_big_offers">Combo with big offers</string>
    <string name="confirm">Confirm</string>
    <string name="please_give_this_code_to_our_staff">Please give this code to our staff</string>
    <string name="all_your_tickets_here">All your tickets here!</string>
    <string name="reviews">Reviews</string>
    <string name="recommended">Recommended</string>
    <string name="similar">Similar</string>
    <string name="genre">Genre:</string>
    <string name="status">Status:</string>
    <string name="tagline">Tagline:</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="director">Director</string>
    <string name="production">Production</string>
    <string name="keywords">Keywords:</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="selected">Selected</string>
    <string name="choose_your_time">Choose your time</string>
    <string name="previous">Previous</string>
    <string name="about">About</string>
    <string name="booking">Booking</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="celebrities">Celebrities</string>
    <string name="airing_today">Airing Today</string>
    <string name="on_the_air">On The Air</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="network">Network</string>
    <string name="production_companies">Production Companies</string>
    <string name="number_of_seasons">Number of seasons: %1$d</string>
    <string name="number_of_episodes">Number of episodes: %1$d</string>
    <string name="type">Type: %1$s</string>
    <string name="rating">Rating: %1$.1f (%2$d votes)</string>
    <string name="seasons">Seasons:</string>
    <string name="season">Season: %1$d</string>
    <string name="media">Media</string>
    <string name="change_password">Change password</string>
    <string name="your_watchlist">Your watchlist</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_your_name">Edit Your name</string>
    <string name="change_email_address">Change email address</string>
    <string name="edit_your_profile_information_here">Edit your profile information here</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="new_password">New password</string>
    <string name="incorrect_password">Incorrect password!</string>
    <string name="password_not_match">Password not match</string>

    <array name="welcome_messages">
        <item>Welcome back!</item>
        <item>Nice to see you again!</item>
        <item>Hello there!</item>
        <item>Glad you\'re here!</item>
        <item>Welcome, friend!</item>
        <item>It\'s great to have you back!</item>
        <item>Hey, you made it!</item>
        <item>Good to see you!</item>
        <item>Welcome aboard!</item>
        <item>Howdy!</item>
    </array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="now_in_theater">Now in theater</string>
    <string name="click_to_see_detail">Click to see detail</string>
    <string name="what_are_you_waiting_for">What are you waiting for?</string>
    <string name="tell_me_what_you_want_to_know">Tell me what you want to know...</string>

</resources>