<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/change_password"
            android:textColor="@color/ThemeSecondary"
            android:textSize="@dimen/textSize_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@null"
            android:hint="@string/enter_your_old_password"
            app:endIconMode="password_toggle">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordConfirmET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="textPassword"
                android:textColor="@color/ThemeSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/incorrectPasswordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incorrect_password"
            android:textColor="@color/dangerous_text"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/new_password"
            app:endIconMode="password_toggle">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="text"
                android:textColor="@color/ThemeSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordNotMatchTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_not_match"
            android:textColor="@color/dangerous_text"
            android:visibility="gone" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@null"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@id/passwordConfirmET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:inputType="text"
                android:textColor="@color/ThemeSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/rounded_corners_bgr_10sdp"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/montserrat"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/rounded_corners_bgr_10sdp"
                android:fontFamily="@font/montserrat"
                android:text="@string/confirm"
                android:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>
</layout>
