<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.auth.signup.SignUpScreen"
        android:background="@color/ThemePrimary">
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/signupImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/signup_img"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backBtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/back"
            android:padding="10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/signupTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textSize="@dimen/textSize_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signupImg"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signupTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:hint="@string/can_we_know_your_name"
            app:startIconDrawable="@drawable/account"
            app:endIconMode="clear_text">

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingStart="40dp"
                tools:ignore="LabelFor,RtlSymmetry"
                android:inputType="textPersonName"
                android:autofillHints="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/emailInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/enter_your_email"
            app:startIconDrawable="@drawable/mail"
            app:endIconMode="clear_text">

            <EditText
                android:id="@id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingStart="40dp"
                tools:ignore="LabelFor,RtlSymmetry"
                android:inputType="textEmailAddress"
                android:autofillHints="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailFormatError"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/emailInputLayout"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            android:textSize="@dimen/textSize_small"
            android:maxLines="2"
            android:text="@string/invalid_email_error"
            android:textStyle="italic"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@id/passwordInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/password"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingStart="40dp"
                tools:ignore="LabelFor,RtlSymmetry"
                android:inputType="textPassword"
                android:autofillHints="password" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/passwordValidatorError"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            android:textSize="@dimen/textSize_small"
            android:maxLines="2"
            android:text="@string/password_validator_error"
            android:textStyle="italic"
            android:visibility="gone"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/password"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/confirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:paddingStart="40dp"
                tools:ignore="LabelFor,RtlSymmetry"
                android:inputType="textPassword"
                android:autofillHints="name" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/confirmPasswordError"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/confirmPasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout"
            android:textSize="@dimen/textSize_small"
            android:maxLines="2"
            android:text="@string/password_must_match"
            android:textStyle="italic"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/receiveNewsCheckBox"
            app:layout_constraintEnd_toEndOf="@id/confirmPasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@id/confirmPasswordInputLayout"
            android:text="@string/receive_our_latest_information"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_bgr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receiveNewsCheckBox"
            android:text="@string/sign_up"
            android:textColor="@color/ThemePrimary"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
